--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-/* for elements that should
-start invisible */
 .hidden {
   display: none;
 }
@@ -20,7 +18,7 @@ fieldset {
   border-image-source: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(6,74,164,1) 65%, rgba(2,0,36,1) 100%);
   border-image-slice: 1;
   border-image-repeat: round;
-  /* backup color, in case border-image doesn't work */
+  /* backup color, in case border-image isn't supported */
   border-color: rgba(6,74,164,1);
 }
 
@@ -31,12 +29,10 @@ legend {
 /* put spaces before and after the legend text
 to make it look neater */
 legend::before, legend::after {
-  /* thin space */
+  /* unicode for thin space */
   content: "\2009"
 }
 
-/* to not directly touch the top of the 
-preceding element */
 button {
   margin: 10px auto;
 }
